--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="ie=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<link rel="canonical" href="https://yusaanri.github.io" />
 		<title>Yusa'ReDived'Anri</title>
 	<style type="text/css">
 	/* CSS styles here... */
@@ -11,7 +14,10 @@
 	<body>
 	
 	<h1>Hello</h1>
-	
+	<div class="content">
+		<main class="main"></main>
+		<div id="sidebar" class="sidebar"></div>
+	</div>
 	</body>
 	
 </html>
