--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	
 	<body>
 	
-	<h1>Hello</h1>
+	<h1>HelloKids</h1>
 	<div class="content">
 		<main class="main"></main>
 		<div id="sidebar" class="sidebar"></div>
