--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<link rel="canonical" href="https://yusaanri.github.io" />
+		<meta name="description" content="YusaAnriのホームページ">
+        <link rel="icon" type="image/png" href="/icon/favicon.png">
+        <link rel="apple-touch-icon" href="/icon/custom-icon.png">
+        <meta name="msapplication-config" content="browserconfig.xml" />
+        <link rel="alternate" href="https://yusaanri.github.io/en/" hreflang="en">
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@site_account">
+        <meta name="twitter:creator" content="@individual_account">
+        <meta name="twitter:url" content="https://example.com/page.html">
+        <meta name="twitter:title" content="Content Title">
+        <meta name="twitter:description" content="Content description less than 200 characters">
+        <meta name="twitter:image" content="https://example.com/image.jpg">
 		<title>Yusa'ReDived'Anri</title>
 	<style type="text/css">
 	/* CSS styles here... */
