--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<link rel="canonical" href="https://yusaanri.github.io" />
+		<title>Yusa'ReDived'Anri</title>
 		<meta name="description" content="YusaAnriのホームページ">
         <link rel="icon" type="image/png" href="/icon/favicon.png">
         <link rel="apple-touch-icon" href="/icon/custom-icon.png">
@@ -17,19 +18,18 @@
         <meta name="twitter:title" content="Content Title">
         <meta name="twitter:description" content="Content description less than 200 characters">
         <meta name="twitter:image" content="https://example.com/image.jpg">
-		<title>Yusa'ReDived'Anri</title>
+
 	<style type="text/css">
 	/* CSS styles here... */
 	</style>
 	</head>
 	
-	<body>
-	
-	<h1>HelloKids</h1>
-	<div class="content">
-		<main class="main"></main>
-		<div id="sidebar" class="sidebar"></div>
-	</div>
+	<body onload="unFold();">
+		<div id="preloader" class="preloader">
+			Endless Loading XD
+
+		</div>
+		<!--End of Preloader-->
+
 	</body>
-	
 </html>
