--- a/index.html
+++ b/index.html
@@ -7,29 +7,32 @@
 		<link rel="canonical" href="https://yusaanri.github.io" />
 		<title>Yusa'ReDived'Anri</title>
 		<meta name="description" content="YusaAnriのホームページ">
-        <link rel="icon" type="image/png" href="/icon/favicon.png">
-        <link rel="apple-touch-icon" href="/icon/custom-icon.png">
-        <meta name="msapplication-config" content="browserconfig.xml" />
-        <link rel="alternate" href="https://yusaanri.github.io/en/" hreflang="en">
-        <meta name="twitter:card" content="summary">
-        <meta name="twitter:site" content="@site_account">
-        <meta name="twitter:creator" content="@individual_account">
-        <meta name="twitter:url" content="https://example.com/page.html">
-        <meta name="twitter:title" content="Content Title">
-        <meta name="twitter:description" content="Content description less than 200 characters">
-        <meta name="twitter:image" content="https://example.com/image.jpg">
+		<meta name="format-detection" content="email=no,telephone=no,address=no">
+		<link rel="icon" type="image/png" href="/icon/favicon.png">
+		<link rel="apple-touch-icon" href="/icon/custom-icon.png">
+		<meta name="msapplication-config" content="browserconfig.xml" />
+		<link rel="alternate" href="https://yusaanri.github.io/en/" hreflang="en">
+		<meta name="twitter:card" content="summary">
+		<meta name="twitter:site" content="@YusaAnri">
+		<meta name="twitter:creator" content="@individual_account">
+		<meta name="twitter:url" content="https://example.com/page.html">
+		<meta name="twitter:title" content="Content Title">
+		<meta name="twitter:description" content="Content description less than 200 characters">
+		<meta name="twitter:image" content="https://example.com/image.jpg">
 
 	<style type="text/css">
 	/* CSS styles here... */
 	</style>
 	</head>
-	
+
 	<body onload="unFold();">
 		<div id="preloader" class="preloader">
 			Endless Loading XD
-
+		
 		</div>
 		<!--End of Preloader-->
 
+		<div id="main"></div>
+		
 	</body>
 </html>
