--- a/index.html
+++ b/index.html
@@ -25,11 +25,38 @@
 	</head>
 	
 	<body onload="unFold();">
+
 		<div id="preloader" class="preloader">
 			Endless Loading XD
 
 		</div>
 		<!--End of Preloader-->
+
+        <nav class="navbar">
+            <div class="burger-nav">
+                <div class="header">
+                    <ul class="open">
+                        <li class="lang-drop"><a href="#About">ABOUT US</a></li>
+                        <div class="lang-content">
+                            <ul class="lang-opt">
+                                <li><a href="yusaanri.html">YusaAnei</a></li>
+                                <li><a href="redived.html">ReDived</a></li>
+                            </ul>
+                        </div>
+                        <li><a href="#Menu">MENU</a></li>
+                        <li><a href="#Contact">CONTACT</a></li>
+                        <li class="lang-drop"><a href="#Lang">In English</a></li>
+                        <div class="lang-content">
+                            <ul class="lang-opt">
+                                <li><a href="est.html">Eesti</a></li>
+                                <li><a href="rus.html">Русский</a></li>
+                            </ul>
+                        </div>
+                    </ul>
+                </div>
+			</div>
+        </nav>
+		<!--End of burger-nav-->
 
 	</body>
 </html>
