--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@YusaAnri">
 		<meta name="twitter:creator" content="@individual_account">
-		<meta name="twitter:url" content="https://example.com/page.html">
-		<meta name="twitter:title" content="Content Title">
-		<meta name="twitter:description" content="Content description less than 200 characters">
+		<meta name="twitter:url" content="https://yusaanri.github.io">
+		<meta name="twitter:title" content="Yusa'ReDived'Anri">
+		<meta name="twitter:description" content="遊佐杏里のホームページです。">
 		<meta name="twitter:image" content="https://example.com/image.jpg">
 
 	<style type="text/css">
