--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="alternate" href="https://yusaanri.github.io/en/" hreflang="en">
 		<meta name="twitter:card" content="summary">
 		<meta name="twitter:site" content="@YusaAnri">
-		<meta name="twitter:creator" content="@individual_account">
+		<meta name="twitter:creator" content="@YusaAnri">
 		<meta name="twitter:url" content="https://yusaanri.github.io">
 		<meta name="twitter:title" content="Yusa'ReDived'Anri">
 		<meta name="twitter:description" content="遊佐杏里のホームページです。">
