--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
 		<meta name="twitter:title" content="Yusa'ReDived'Anri">
 		<meta name="twitter:description" content="遊佐杏里のホームページです。">
 		<meta name="twitter:image" content="https://example.com/image.jpg">
-
-	<style type="text/css">
-	/* CSS styles here... */
-	</style>
+		<script src="js/preload.js" charset="utf-8"></script>
+		
 	</head>
 
 	<body onload="unFold();">
