--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<meta name="twitter:title" content="Yusa'ReDived'Anri">
 		<meta name="twitter:description" content="遊佐杏里のホームページです。">
 		<meta name="twitter:image" content="https://example.com/image.jpg">
+		<link rel="stylesheet" href="css/main.css">
 		<script src="js/preload.js" charset="utf-8"></script>
 		
 	</head>
