--- a/index.html
+++ b/index.html
@@ -27,8 +27,26 @@
 	<body onload="unFold();">
 
 		<div id="preloader" class="preloader">
-			Endless Loading XD
-		
+
+			<svg version="1.1" id="flash1" class="flash" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-223 25 512 512" style="enable-background:new -223 25 512 512;" xml:space="preserve">
+				<style type="text/css">
+					.st8{fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;}
+				</style>
+			
+				<polygon class="st8" points="-100,518 169,205 53,205 159,35 25,35 -100,286 2,286 "/>
+				<path class="st8" d="M511,176"/>
+			</svg>
+
+			<script>
+				var flash = document.getElementById("flash1");
+				
+				function animate() {
+					flash.style.opacity = Math.random();
+					window.requestAnimationFrame(animate);
+				}
+				animate();
+			</script>
+			
 		</div>
 		<!--End of Preloader-->
 
