--- a/index.html
+++ b/index.html
@@ -54,23 +54,17 @@
             <div class="burger-nav">
                 <div class="header">
                     <ul class="open">
-                        <li class="lang-drop"><a href="#About">ABOUT US</a></li>
+                        <li class="lang-drop"><a href="#About">About</a></li>
                         <div class="lang-content">
                             <ul class="lang-opt">
                                 <li><a href="yusaanri.html">YusaAnei</a></li>
                                 <li><a href="redived.html">ReDived</a></li>
                             </ul>
                         </div>
-                        <li><a href="#Menu">MENU</a></li>
-                        <li><a href="#Contact">CONTACT</a></li>
-                        <li class="lang-drop"><a href="#Lang">In English</a></li>
-                        <div class="lang-content">
-                            <ul class="lang-opt">
-                                <li><a href="est.html">Eesti</a></li>
-                                <li><a href="rus.html">Русский</a></li>
-                            </ul>
-                        </div>
-                    </ul>
+						<li><a href="#Work">Work</a></li>
+						<li><a href="#Link">Link</a></li>
+						<li><a href="#Contact">CONTACT</a></li>
+	                </ul>
                 </div>
 			</div>
         </nav>
