--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<div id="preloader" class="preloader">
 
-			<svg version="1.1" id="flash1" class="flash" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-223 25 512 512" style="enable-background:new -223 25 512 512;" xml:space="preserve">
+			<svg version="1.1" id="flash" class="flash" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="-223 25 512 512" style="enable-background:new -223 25 512 512;" xml:space="preserve">
 				<style type="text/css">
 					.st8{fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;}
 				</style>
@@ -38,7 +38,7 @@
 			</svg>
 
 			<script>
-				var flash = document.getElementById("flash1");
+				var flash = document.getElementById("flash");
 				
 				function animate() {
 					flash.style.opacity = Math.random();
@@ -54,15 +54,15 @@
             <div class="burger-nav">
                 <div class="header">
                     <ul class="open">
-                        <li class="lang-drop"><a href="#About">About</a></li>
+                        <li class="lang-drop"><a href="#About">ABOUT</a></li>
                         <div class="lang-content">
                             <ul class="lang-opt">
                                 <li><a href="yusaanri.html">YusaAnei</a></li>
                                 <li><a href="redived.html">ReDived</a></li>
                             </ul>
                         </div>
-						<li><a href="#Work">Work</a></li>
-						<li><a href="#Link">Link</a></li>
+						<li><a href="#Work">WORK</a></li>
+						<li><a href="#Link">LINK</a></li>
 						<li><a href="#Contact">CONTACT</a></li>
 	                </ul>
                 </div>
