--- a/index.html
+++ b/index.html
@@ -52,23 +52,43 @@
 
         <nav class="navbar">
             <div class="burger-nav">
-                <div class="header">
-                    <ul class="open">
-                        <li class="lang-drop"><a href="#About">ABOUT</a></li>
-                        <div class="lang-content">
-                            <ul class="lang-opt">
-                                <li><a href="yusaanri.html">YusaAnei</a></li>
+                <div class="header"></div>
+                <ul class="open">
+                    <li class="lang-drop"><a href="#About">ABOUT US</a></li>
+                    <div class="lang-content">
+                        <ul class="lang-opt">
+                            <li><a href="yusaanri.html">YusaAnei</a></li>
+                            <li><a href="redived.html">ReDived</a></li>
+                        </ul>
+                    </div>
+					<li><a href="#Menu">MENU</a></li>
+					<li><a href="#Link">LINK</a></li>
+                    <li><a href="#Contact">CONTACT</a></li>
+                </ul>
+            </div>
+            <!--End of burger-nav-->
+
+            <ul class="links">
+                <li><a href="#About" class="nav-item lang">ABOUT</a>
+                    <!-- <img src="img/down-arrow.svg" id="arrow"> -->
+                    <div class="nav-content">
+                        <div class="nav-sub">
+                            <ul>
+                                <li><a href="yusaanri.html">YusaAnri</a></li>
                                 <li><a href="redived.html">ReDived</a></li>
                             </ul>
                         </div>
-						<li><a href="#Work">WORK</a></li>
-						<li><a href="#Link">LINK</a></li>
-						<li><a href="#Contact">CONTACT</a></li>
-	                </ul>
-                </div>
-			</div>
+                    </div>
+                    <!--End of dropdown content-->
+                </li>
+                <li><a href="#Menu" class="nav-item">MENU</a></li>
+				<li><a href="#Home" class="" id="Logo"></a></li>
+				<li><a href="#Link" class="nav-item">LINK</a></li>
+                <li><a href="#Contact" class="nav-item">CONTACT</a></li>
+            </ul>
         </nav>
-		<!--End of burger-nav-->
-
+		<!--End of Navbar-->
+		
+		
 	</body>
 </html>
