--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<meta name="twitter:image" content="https://example.com/image.jpg">
 		<link rel="stylesheet" href="css/main.css">
 		<script src="js/preload.js" charset="utf-8"></script>
-		
+
 	</head>
 
 	<body onload="unFold();">
@@ -50,45 +50,45 @@
 		</div>
 		<!--End of Preloader-->
 
-        <nav class="navbar">
-            <div class="burger-nav">
-                <div class="header"></div>
-                <ul class="open">
-                    <li class="lang-drop"><a href="#About">ABOUT US</a></li>
-                    <div class="lang-content">
-                        <ul class="lang-opt">
-                            <li><a href="yusaanri.html">YusaAnei</a></li>
-                            <li><a href="redived.html">ReDived</a></li>
-                        </ul>
-                    </div>
-					<li><a href="#Menu">MENU</a></li>
-					<li><a href="#Link">LINK</a></li>
-                    <li><a href="#Contact">CONTACT</a></li>
-                </ul>
-            </div>
-            <!--End of burger-nav-->
+		<nav class="navbar">
+			<div class="burger-nav">
+				<div class="header">
+					<ul class="open">
+						<li class="lang-drop"><a href="#About">ABOUT US</a></li>
+						<div class="lang-content">
+							<ul class="lang-opt">
+								<li><a href="yusaanri.html">YusaAnei</a></li>
+								<li><a href="redived.html">ReDived</a></li>
+							</ul>
+						</div>
+						<li><a href="#Menu">MENU</a></li>
+						<li><a href="#Link">LINK</a></li>
+						<li><a href="#Contact">CONTACT</a></li>
+					</ul>
+				</div>
+			</div>
+			<!--End of burger-nav-->
 
-            <ul class="links">
-                <li><a href="#About" class="nav-item lang">ABOUT</a>
-                    <!-- <img src="img/down-arrow.svg" id="arrow"> -->
-                    <div class="nav-content">
-                        <div class="nav-sub">
-                            <ul>
-                                <li><a href="yusaanri.html">YusaAnri</a></li>
-                                <li><a href="redived.html">ReDived</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!--End of dropdown content-->
-                </li>
-                <li><a href="#Menu" class="nav-item">MENU</a></li>
+			<ul class="links">
+				<li><a href="#About" class="nav-item lang">ABOUT</a>
+					<!-- <img src="img/down-arrow.svg" id="arrow"> -->
+					<div class="nav-content">
+						<div class="nav-sub">
+							<ul>
+								<li><a href="yusaanri.html">YusaAnri</a></li>
+								<li><a href="redived.html">ReDived</a></li>
+							</ul>
+						</div>
+					</div>
+					<!--End of dropdown content-->
+				</li>
+				<li><a href="#Menu" class="nav-item">MENU</a></li>
 				<li><a href="#Home" class="" id="Logo"></a></li>
 				<li><a href="#Link" class="nav-item">LINK</a></li>
-                <li><a href="#Contact" class="nav-item">CONTACT</a></li>
-            </ul>
-        </nav>
+				<li><a href="#Contact" class="nav-item">CONTACT</a></li>
+			</ul>
+		</nav>
 		<!--End of Navbar-->
-		
-		
+
 	</body>
 </html>
