--- a/index.html
+++ b/index.html
@@ -90,5 +90,29 @@
 		</nav>
 		<!--End of Navbar-->
 
+		<div class="slider" id="Home">
+            <div class="controllers">
+                <li><img src="img/backward-arrow.svg" class="prev"></li>
+                <li><img src="img/arrow.svg" class="next"></li>
+            </div>
+
+            <div class="slide-viewer">
+                <div class="slides">
+                    <div class="slide slide-1"><img src="https://raw.githubusercontent.com/daysleeperx/cloud_bar/master/img/codepen1.png" alt=""></div>
+                    <div class="slide slide-2"><img src="https://raw.githubusercontent.com/daysleeperx/cloud_bar/master/img/slide3.png" alt=""></div>
+                    <div class="slide slide-3"><img src="https://raw.githubusercontent.com/daysleeperx/cloud_bar/master/img/codepen3.png" alt=""></div>
+                </div>
+            </div>
+
+            <div class="bullets">
+            </div>
+
+            <p class="scrolltxt">SCROLL</p>
+
+            <div class="scroll"></div>
+        </div>
+        <!--End of Slider-->
+
+
 	</body>
 </html>
